# hyperplane

./: .gitignore  Anchor.toml  Cargo.toml  README.md  SECURITY.md  coverage.sh
.github/: dependabot.yml
.github/workflows/: fuzz-nightly.yml  pull-request-hyperplane.yml  pull-request.yml
ci/: cargo-build-test.sh  cargo-draw-viz.sh  do-audit.sh  install-anchor.sh  install-build-deps.sh  install-viz-deps.sh  js-test-hyperplane.sh  solana-version.sh
client/: Cargo.toml
client/src/: client.rs  command.rs  configs.rs  lib.rs  main.rs  model.rs
client/src/utils/: macros.rs
client/tests/: test_cli.rs
client/tests/runner/: anchor.rs  cli.rs  file.rs  mod.rs  validator.rs
docs/: sidebars.js
docs/src/: hyperplane.md
js/: .gitignore  .prettierignore  README.md  package-lock.json  package.json  tsconfig.cjs.json  tsconfig.json
js/src/: index.ts
js/src/util/: const.ts  new-account-with-lamports.ts  ser.ts
js/test/: hyperplane-test.ts  main.ts
libraries/concurrent-merkle-tree/: Cargo.toml
libraries/merkle-tree-reference/: Cargo.toml
managed-token/program/: Cargo.toml
name-service/program/: Cargo.toml
programs/hyperplane/: Cargo.toml
programs/hyperplane/fuzz/: Cargo.toml  README.md
programs/hyperplane/fuzz/src/: instructions.rs  native_account_data.rs  native_processor.rs  native_token.rs  native_token_swap.rs
programs/hyperplane/sim/: Cargo.toml  README.md
programs/hyperplane/sim/src/: lib.rs
programs/hyperplane/src/: constraints.rs  error.rs  event.rs  ix.rs  lib.rs  processor.rs  state.rs
programs/hyperplane/src/curve/: base.rs  calculator.rs  constant_price.rs  constant_product.rs  fees.rs  math.rs  offset.rs  stable.rs
programs/hyperplane/src/instructions/: deposit.rs  deposit_all_token_types.rs  deposit_single_token_type.rs  initialize_pool.rs  mod.rs  swap.rs  update_pool_config.rs  withdraw.rs  withdraw_all_token_types.rs  withdraw_fees.rs  withdraw_single_token_type.rs
programs/hyperplane/src/instructions/test/: mod.rs  test_deposit.rs  test_deposit_all_token_types.rs  test_deposit_single_token_type.rs  test_initialize_pool.rs  test_swap.rs  test_withdraw.rs  test_withdraw_all_token_types.rs  test_withdraw_single_token_type.rs
programs/hyperplane/src/instructions/test/runner/: mod.rs  processor.rs  syscall_stubs.rs  token.rs
programs/hyperplane/src/utils/: instructions.rs  macros.rs  math.rs  mod.rs  pool_token.rs  seeds.rs  swap_token.rs  token_2022.rs
programs/hyperplane/tests/: tests_common_deposit.rs  tests_common_deposit_all.rs  tests_common_swap.rs  tests_common_swap_transfer_fees.rs  tests_initialize_pool.rs  tests_security_swap.rs  tests_security_update_swap_config.rs  tests_security_withdraw.rs  tests_security_withdraw_fees.rs  tests_stable_swap.rs  tests_withdraw.rs  tests_withdraw_fees.rs
programs/hyperplane/tests/common/: client.rs  fixtures.rs  macros.rs  mod.rs  runner.rs  setup.rs  state.rs  token_operations.rs  types.rs  utils.rs
programs/hyperplane/viz/: Cargo.toml  README.md
programs/hyperplane/viz/src/: main.rs  stable.rs
token-swap/js/: package-lock.json  package.json  tsconfig.json
token-swap/program/: Cargo.toml
token-swap/program/fuzz/: Cargo.toml
token-swap/program/fuzz/src/: instructions.rs  native_token_swap.rs
token-swap/program/src/: lib.rs  processor.rs
token-upgrade/cli/: Cargo.toml
token/cli/: Cargo.toml
token/js/: package-lock.json
