[package]
name = "hyperplane-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hyperplane"
path = "src/main.rs"

[lib]
name = "hyperplane_client"
path = "src/lib.rs"

[features]
rpc-client = ["orbit-link/rpc-client"]
banks-client = ["orbit-link/banks-client"]

[dependencies]
clap = { version = "3.2.11", features = ["derive", "env", "wrap_help"] }
anchor-client = {git = "https://github.com/hubbleprotocol/anchor", branch = "feature/token-program-constraint" }
anchor-spl = {git = "https://github.com/hubbleprotocol/anchor", branch = "feature/token-program-constraint" }
anyhow = "1.0.0"
hyperplane = { path = "../programs/hyperplane", features = [ "no-entrypoint", "serde" ] }
orbit-link = { git = "https://github.com/hubbleprotocol/scope", branch = "feature/token-program-constraint" }
tokio = "1.14.1"
tracing = "0.1.10"
tracing-subscriber = { version = "0.3.9", features = ["std", "fmt", "json"] }
serde = "1.0.136"
serde_json = "1.0.79"
spl-token = { version = "3.5.0", features=["no-entrypoint"] }
solana-address-lookup-table-program = "1.14.16"
spl-associated-token-account = "1.1.2"
strum = { git = "https://github.com/hubbleprotocol/strum", features = ["derive"], branch = "checked_arithmetics" }

[dev-dependencies]
regex = "1.7.1"
solana-banks-client = "1.14.16"
solana-banks-interface = "1.14.16"
solana-program-test = "1.14.16"
