[package]
name = "hyperplane"
version = "1.0.0"
description = "Hyperplane token swap program"
authors = ["Hyperplane Contributors <dev@hubbleprotocol.io>"]
repository = "https://github.com/hubbleprotocol/hyperplane"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
production = []
fuzz = ["arbitrary", "roots"]

[dependencies]
anchor-lang = {git = "https://github.com/hubbleprotocol/anchor", branch = "tk22" }
anchor-spl = {git = "https://github.com/hubbleprotocol/anchor", branch = "tk22", features = ["token", "token_2022", "metadata"] }
arrayref = "0.3.6"
# required by anchor for zero_copy accounts
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"]}
enum_dispatch = "0.3.7"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.11"
spl-math = { version = "0.1.0", features = ["no-entrypoint"] }
arbitrary = { version = "1.0", features = ["derive"], optional = true }
roots = { version = "0.0.8", optional = true }

[dev-dependencies]
hyperplane-sim =  { path = "./sim" }
proptest = "1.0"
roots = "0.0.8"
solana-sdk = "1.14.12"
solana-program-test = "1.14.12"
test-case = "3.0"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
