[package]
name = "hyperplane"
version = "1.0.0"
description = "Hyperplane token swap program"
authors = ["Hyperplane Contributors <dev@hubbleprotocol.io>"]
repository = "https://github.com/hubbleprotocol/hyperplane"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
production = []
fuzz = ["arbitrary", "roots"]
serde = ["dep:serde"]

[dependencies]
anchor-lang = { version = "0.29.0" }
anchor-spl = { version = "0.29.0", features = ["dex", "token", "token_2022"] }
arrayref = "0.3.7"
# required by anchor for zero_copy accounts
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"]}
derive_more = "0.99.17"
enum_dispatch = "0.3.7"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.11"
spl-math = { version = "0.2.0", features = ["no-entrypoint"] }
arbitrary = { version = "1.3", features = ["derive"], optional = true }
roots = { version = "0.0.8", optional = true }
strum = { git = "https://github.com/hubbleprotocol/strum", features = ["derive"], branch = "checked_arithmetics" }
# Only required when de/serializing pool config to JSON
serde = { version = "1.0.159", optional = true }
spl-pod = "0.1.1"

[dev-dependencies]
hyperplane-sim =  { path = "./sim" }
proptest = "1.0"
rand = "0.8.5"
roots = "0.0.8"
solana-sdk = "1.17.18"
solana-program-test = { git = "https://github.com/hubbleprotocol/solana.git", branch = "anchor_0.29_compat" }
test-case = "3.0"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
